<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WakeTimerforKids</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
 	<string name="clock">Clock</string>
 	<string name="smallClockText">in the</string>
 	<string name="largeClockText">Afternoon</string>
 	<string name="choose_color">Choose Background Color</string>
    <string name="choose_image">........... or choose your own image</string>
    <string name="blur_image">*Image will have a blur</string>
    <string name="Wakeup">Wake Up Time</string>
    <string name="Clock">9:12</string>
    <string name="childtime">What time is it acceptable for your child to wake up?</string>
    <string name="NightMode">Night Time Smooth Mode</string>
    <string name="NapMode">Enable Nap Mode</string>
    <string name="CountClock">Show CountMe Clocks</string>
    <string name="EnableCountClock">Your child can know what Hour it is just by counting the clocks on the bottom, if you want them off, here you go.</string>
    <string name="EnableNapMode">Nap Mode Enabled allows you to add a Second Sooth Mode during the day.</string>
    <string name="Kid_Clock">Kid Clock has a night time mode that uses soothing colors to promote a calm and  relaxing environment. Tell us what time is bedtime and Wake Advisor will do the rest!</string>
 	
</resources>
